[package]
name = "cli-flash-cleaner"
version = "1.0.0"
authors = ["Sharnalk <anas.jiyar1@gmail.com>"]
edition = "2024"
description = "A fast and safe CLI tool to clean files by extension or name."
license = "MIT"

[dependencies]
clap = { version = "4.5.55", features = ["derive"] }
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3"
